--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,61 @@
-/* top players style  */
-.players{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+/* ------fonts----- */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+
+/* ------font close----- */
+
+/* ----common styles or utilitys---- */
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #ffffff;
 }
 
-.player{
-        display: flex;
-        align-items: center;
+main {
+  display: flex;
+  justify-content: center;
 }
-.players img{
-        width: 56px;
-        height: 56px;
+.container {
+  background-color: #ffffff;
+  width: 870px;
+  padding: 30px;
+}
+
+/* ----common close---- */
+
+.section-title {
+  color: #562eff;
+  font-size: 24px;
+  margin-top: 3px;
+  margin-bottom: 54px;
+}
+
+/* top players style  */
+.top-players {
+  margin-bottom: 30px;
+}
+.players {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 30px;
+}
+
+.player {
+  display: flex;
+  align-items: center;
+}
+
+.players img {
+  width: 56px;
+  height: 56px;
+}
+
+.player-name {
+  margin-left: 16px;
+  font-size: 18px;
+}
+
+.hr {
+  border: 1px solid #d1d1d1;
+  position: absolute;
 }
